# Checkers

./: .clang-format  Board.drawio  Диаграмма без названия.drawio
.github/workflows/: push_notification.yml
src/: CMakeLists.txt  Dependencies.cmake  main.cpp
src/models/game/: CMakeLists.txt
src/models/ui/: CMakeLists.txt
src/models/ui/headers/: BoardModel.h  GameModel.h  MainMenuModel.h  MainWindowModel.h  SettingsModel.h  StaticsModel.h  StatisticsModel.h  iuimodel.h
src/models/ui/source/: BoardModel.cpp  GameModel.cpp  MainMenuModel.cpp  MainWindowModel.cpp  SettingsModel.cpp  StaticsModel.cpp  StatisticsModel.cpp
src/views/Interface/: IView.h
src/views/qtwidgets/: CMakeLists.txt
src/views/qtwidgets/headers/: BoardView.h  CellView.h  GameView.h  MainWindowView.h  MyButtonRect.h  MyButtonRound.h  mainmenuview.h
src/views/qtwidgets/source/: BoardView.cpp  CellView.cpp  GameView.cpp  MainMenuView.cpp  MainWindowView.cpp  MyButtonRect.cpp  MyButtonRound.cpp
